fix: update redirects to static pages

--- a/public/login-static.html
+++ b/public/login-static.html
@@ -50,7 +50,7 @@
 <script>
   // Check if already logged in
   if (checkAuth()) {
-    window.location.href = 'dashboard.html';
+    window.location.href = 'dashboard-static.html';
   }
 </script>
 
