Fix: Add for attribute to all labels for accessibility

--- a/public/login.html
+++ b/public/login.html
@@ -33,7 +33,7 @@
 
       <form id="loginForm">
         <div class="input-group">
-          <label>Email</label>
+          <label for="email">Email</label>
           <div class="input-wrapper">
             <span class="input-icon">✉</span>
             <input id="email" type="email" placeholder="nama@email.com" required>
@@ -41,7 +41,7 @@
         </div>
 
         <div class="input-group">
-          <label>Password</label>
+          <label for="password">Password</label>
           <div class="input-wrapper">
             <span class="input-icon">🔒</span>
             <input id="password" type="password" placeholder="••••••••" required>
