--- a/public/register.html
+++ b/public/register.html
@@ -32,7 +32,7 @@
 
       <form id="registerForm">
         <div class="input-group">
-          <label>Nama Lengkap</label>
+          <label for="name">Nama Lengkap</label>
           <div class="input-wrapper">
             <span class="input-icon">👤</span>
             <input id="name" type="text" placeholder="John Doe" required>
@@ -40,7 +40,7 @@
         </div>
 
         <div class="input-group">
-          <label>Email</label>
+          <label for="email">Email</label>
           <div class="input-wrapper">
             <span class="input-icon">✉</span>
             <input id="email" type="email" placeholder="nama@email.com" required>
@@ -48,7 +48,7 @@
         </div>
 
         <div class="input-group">
-          <label>Password</label>
+          <label for="password">Password</label>
           <div class="input-wrapper">
             <span class="input-icon">🔒</span>
             <input id="password" type="password" placeholder="Minimal 6 karakter" required minlength="6">
@@ -57,7 +57,7 @@
         </div>
 
         <div class="input-group">
-          <label>Konfirmasi Password</label>
+          <label for="confirmPassword">Konfirmasi Password</label>
           <div class="input-wrapper">
             <span class="input-icon">🔒</span>
             <input id="confirmPassword" type="password" placeholder="Ulangi password" required>
